<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Guestify</string>
    <string name="choose_a_template">Choose a template</string>
    <string name="we_ve_prepared_templates_for_you_to_choose_from_take_a_look">We\'ve prepared templates for you to choose from. Take a look!</string>
    <string name="template">template</string>
    <string name="already_got_your_own_invitation">Already got your own invitation?</string>
    <string name="upload_custom_invite">Upload Custom Invite</string>
    <string name="dashboard">Dashboard</string>
    <string name="monitor_and_manage_your_events">Monitor and manage your events</string>
    <string name="new_event">New Event</string>
    <string name="event_image">Event Image</string>
    <string name="delete_event">Delete Event</string>
    <string name="event_name">Event Name</string>
    <string name="event_date">Event Date</string>
    <string name="view_and_edit_your_event_details">View and Edit Your Event Details</string>
    <string name="event_date_">Event Date:</string>
    <string name="event_time">Event Time:</string>
    <string name="bride_s_name">Bride\'s Name:</string>
    <string name="bride_s_parent_s_name">Bride\'s Parent\'s Name:</string>
    <string name="groom_s_name">Groom\'s Name:</string>
    <string name="groom_s_parent_s_name">Groom\'s Parent\'s Name:</string>
    <string name="event_hall">Event Hall:</string>
    <string name="event_location">Event Location:</string>
    <string name="description">Description:</string>
    <string name="amount_of_guests">Amount of guests:</string>
    <string name="edit_guests">Edit Guests</string>
    <string name="edit_event">Edit Event</string>
    <string name="delete">delete</string>
    <string name="name">Name:</string>
    <string name="phone_number">Phone number:</string>
    <string name="edit">edit</string>
    <string name="event_guest_list">Event Guest List</string>
    <string name="manage_your_guest_list_here">Manage Your Guest List Here</string>
    <string name="add_guests">Add Guests</string>
    <string name="open_contacts">Open Contacts</string>
    <string name="or_add_guests_manually">Or, add guests manually..</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_guest_name">Enter guest name</string>
    <string name="save_guest">Save Guest</string>
    <string name="finish">Finish</string>
    <string name="create_your_digital_invitation">Create New Event</string>
    <string name="enter_the_groom_s_name">Enter the groom\'s name</string>
    <string name="example_rotem_and_roei_haver">Example: Rotem and Roei Haver</string>
    <string name="enter_the_bride_s_name">Enter the bride\'s name</string>
    <string name="example_hannan_and_yohevet_fridman">Example: Hannan and Yohevet Fridman</string>
    <string name="enter_the_event_location">Enter the event location</string>
    <string name="venue_name">Venue Name:</string>
    <string name="example_gan_havradim">Example: Gan Havradim</string>
    <string name="expected_number_of_guests">Expected number of guests:</string>
    <string name="example_350">Example: 350</string>
    <string name="select_your_event_date_amp_time"><![CDATA[Select your event date & time]]></string>
    <string name="invitation_text">Invitation Text:</string>
    <string name="this_is_the_main_text_of_your_invitation">This is the main text of your invitation.</string>
    <string name="pick_a_template">Pick A Template</string>
    <string name="jessica_amp_michael" translatable="false"><![CDATA[Jessica & Michael]]></string>
    <string name="the_wedding">The Wedding</string>
    <string name="we_are_excited_to_invite_you_to_celebrate_with_us_on_our_happiest_day">We are excited to invite you to celebrate with us on our happiest day.</string>
    <string name="august_15_2024" translatable="false">August 15, 2024</string>
    <string name="thursday">Thursday</string>
    <string name="troyah_hall">Troyah Hall</string>
    <string name="_123_main_street_city">123 Main Street, City</string>
    <string name="_7_30_pm">7:30 PM</string>
    <string name="ceremony">Ceremony</string>
    <string name="we_look_forward_to_celebrating_with_you">We look forward to celebrating with you!</string>
    <string name="bride_s_parents">Bride\'s Parents</string>
    <string name="mary_amp_john_johnson" translatable="false"><![CDATA[Mary & John Johnson]]></string>
    <string name="groom_s_parents">Groom\'s Parents</string>
    <string name="hila_amp_noam"><![CDATA[HILA & NOAM]]></string>
    <string name="neta_amp_barak"><![CDATA[Neta & Barak]]></string>
    <string name="are_getting_married">Are Getting Married</string>
    <string name="_04_02_2025" translatable="false">04.02.2025</string>
    <string name="tuesday_11_shevat">Tuesday, 11 Shevat</string>
    <string name="ashdod_israel">Ashdod, Israel</string>
    <string name="_20_30" translatable="false">20:30</string>
    <string name="adina_amp_meir_job"><![CDATA[Adina & Meir Job]]></string>
    <string name="ovadia_amp_gail_tzion"><![CDATA[Ovadia & Gail Tzion]]></string>
    <string name="sara_amp_david_brown"><![CDATA[Sara & David Brown]]></string>
    <string name="bnei_darom_hall">Bnei Darom Hall</string>
    <string name="_14_10_2024" translatable="false">14.10.2024</string>
    <string name="mazal_and_ilon_yitzhakan" translatable="false">מזל ואילון יצחקן</string>
    <string name="many_waters_cannot_extinguish_love" translatable="false">“מים רבים לא יוכלו לכבות את האהבה...”</string>
    <string name="we_are_delighted_and_excited_to_invite_you_to_celebrate_with_us_the_happiest_day_of_our_lives" translatable="false">"שמחים ונרגשים להזמינכם לחגוג עמנו את היום המאושר בחיינו  "</string>
    <string name="error">Error</string>
    <string name="event_not_found">Event not found.</string>
    <string name="ok">OK</string>
    <string name="confirm_template">Confirm Template</string>
    <string name="do_you_want_to_proceed_with_the_selected_template">Do you want to proceed with the selected template?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_event_confirmation">Delete Event Confirmation</string>
    <string name="are_you_sure_you_want_to_delete_this_event_this_action_cannot_be_undone">Are you sure you want to delete this event? This action cannot be undone.</string>
    <string name="save">Save</string>
    <string name="bride_s_name_cannot_be_empty">Bride\'s Name cannot be empty</string>
    <string name="bride_s_name_must_be_at_most_20_characters">Bride\'s Name must be at most 20 characters</string>
    <string name="bride_s_parents_cannot_be_empty">Bride\'s Parents cannot be empty</string>
    <string name="bride_s_parents_name_must_be_at_most_50_characters">Bride\'s Parents name must be at most 50 characters</string>
    <string name="groom_s_name_cannot_be_empty">Groom\'s Name cannot be empty</string>
    <string name="groom_s_name_must_be_at_most_20_characters">Groom\'s Name must be at most 20 characters</string>
    <string name="groom_s_parents_cannot_be_empty">Groom\'s Parents cannot be empty</string>
    <string name="groom_s_parents_name_must_be_at_most_50_characters">Groom\'s Parents name must be at most 50 characters</string>
    <string name="event_hall_cannot_be_empty">Event Hall cannot be empty</string>
    <string name="event_hall_must_be_at_most_20_characters">Event Hall must be at most 20 characters</string>
    <string name="event_location_cannot_be_empty">Event Location cannot be empty</string>
    <string name="event_location_must_be_at_most_50_characters">Event Location must be at most 50 characters</string>
    <string name="amount_of_guests_cannot_be_empty">Amount of guests cannot be empty</string>
    <string name="please_enter_a_valid_number_0"><![CDATA[Please enter a valid number (> 0)]]></string>
    <string name="please_enter_a_valid_number_100_000"><![CDATA[Please enter a valid number (< 100,000)]]></string>
    <string name="please_fill_in_all_fields">Please fill in all fields</string>
    <string name="guest_updated">Guest updated</string>
    <string name="guest_added">Guest added</string>
    <string name="delete_guest">Delete Guest</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete %1$s?</string>
    <string name="has_been_deleted">%1$s has been deleted</string>
    <string name="permission_denied">Permission denied</string>
    <string name="choose_contacts">Choose contacts</string>
    <string name="add">Add</string>
    <string name="guests_added">Guests added</string>
    <string name="cancel">Cancel</string>
    <string name="please_fix_the_errors_above">Please fix the errors above.</string>
    <string name="event_date_time_cannot_be_empty"><![CDATA[Event Date & Time cannot be empty]]></string>
    <string name="invitation_text_cannot_be_empty">Invitation text cannot be empty</string>
    <string name="invitation_text_must_be_at_most_250_characters">Invitation text must be at most 250 characters</string>
    <string name="please_enter_a_valid_number_100000"><![CDATA[Please enter a valid number (< 100000)]]></string>
    <string name="number_of_guests_cannot_be_empty">Number of guests cannot be empty</string>
    <string name="venue_must_be_at_most_100_characters">Venue must be at most 100 characters</string>
    <string name="venue_cannot_be_empty">Venue cannot be empty</string>
    <string name="event_location_must_be_at_most_100_characters">Event Location must be at most 100 characters</string>
    <string name="wedding3"><![CDATA[%1$s & %2$s Wedding]]></string>
    <string name="happy_and_excited_to_invite_you_to_celebrate_with_us_the_happiest_day_of_our_lives">Happy and excited to invite you to celebrate with us the happiest day of our lives.</string>
    <string name="love_phrase">Many waters cannot quench love…</string>
    <string name="love_phrase_2">“Together is a wonderful place to be.”</string>
    <string name="generating_templates">Generating Templates...</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="welcome_to_guestify">Welcome to Guestify</string>
    <string name="signup">Signup</string>
    <string name="login_btn">Login</string>
    <string name="email">Email</string>
    <string name="confrim_password">Confrim password</string>
    <string name="confirm">Confirm</string>
    <string name="favorite_button">Favorite button</string>
    <string name="favorite_events">Favorite Events</string>
    <string name="Autocomplete_error_launch">Error loading search, please try again</string>
    <string name="Autocomplete_error_cancel">Search cancelled, please try again</string>
    <string name="Autocomplete_error_place_selection">Error while location was chose, please try again</string>
    <string name="Autocomplete_error_Unexpected_error">Unexpected error, please try again</string>
    <string name="email_is_required">Email is required</string>
    <string name="password_must_be_at_least_6_characters">Password must be at least 6 characters</string>
    <string name="error_saving_user">Error saving user : %1$s</string>
    <string name="sign_up_successful">Sign-up successful!</string>
    <string name="please_confirm_your_password">Please confirm your password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="email_password_required"><![CDATA[Email & Password required!]]></string>
    <string name="login_successful">Login successful!</string>
    <string name="login_failed">Login failed : %1$s</string>

</resources>