<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.Fragments.LoginFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingTop="50dp"
    android:paddingBottom="60dp">

    <!-- Headline: Create Your Digital Invitation -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_guestify"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/text_primary"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/text_primary"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:boxStrokeColor="@color/input_border_color"
        app:hintTextColor="@color/primary"
        app:placeholderTextColor="@color/primary"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:boxStrokeColor="@color/input_border_color"
        app:hintTextColor="@color/primary"

        app:placeholderTextColor="@color/primary"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <!-- Save Guest Button -->
        <Button
            android:id="@+id/btn_login"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:backgroundTint="@color/primary"
            android:text="@string/login_btn" />

        <!-- Spacer Between Buttons -->
        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <!-- Finish Button -->
        <Button
            android:id="@+id/btn_signup"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/primary"
            android:text="@string/signup"
            android:textColor="@color/white"/>
    </LinearLayout>


</LinearLayout>